src/test/deca/syntax/invalid/created/wrong_order_in_bloc/class_after_program.deca
// Description:
//      Creation class apres programme
// Resultat:
//      Error syntaxe Ligne 7 : mismatched input 'class' expecting {'false', 'if', 'new', 'null', 'readInt', 'readFloat', 'print', 'println', 'printlnx', 'printx', 'return', 'this', 'true', 'while', IDENT, '-', ';', '(', '}', '!', INT, FLOAT, STRING}

{}
class A {}